package entities;

public enum Color {
    RED, BLUE, BLACK;
}
