package entities;

public class InvalidFileException extends Exception {
    public InvalidFileException(String message) {
        super(message);
    }
}
