package entities;

public class InvalidLocationException extends Throwable {
    public InvalidLocationException(String s) {
    }
}
